--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,30 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
+html {
+  background-color: #FBF9FA;
+  border-width: thick;
+}
+
+h1 {
+  font-family: 'PT Sans', sans-serif;
+  color: #FF885C;
+  padding-top: 1em;
+}
+
+h2 {
+  font-family: 'PT Serif', serif;
+}
+
+.grid {
+  padding-left: 20em;
+  padding-top: 5em;
+}
+
 .logo-size {
-  max-width: 3.5em;
-  max-height: 4em;
+  max-height: 10em;
+  max-width: 10em;
 }
