--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,30 @@ h5 {
 .icon-big {
   max-width: 3em;
 }
+
+@media only screen and (min-width: 0em) {
+
+ .logo {
+    margin: 0 auto;
+    max-width: 7em;
+    min-width: 7em;
+ }
+
+}
+
+@media only screen and (min-width: 46em) {
+
+ .logo {
+    max-width: 12em;
+    min-width: 12em;
+ }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+ .logo {
+    min-width: 5em;
+ }
+
+}
